--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,13 @@ All colors MUST be HSL.
     /* Info blue for notifications */
     --info: 217 91% 60%;
     --info-foreground: 0 0% 100%;
+    
+    /* Additional utility colors */
+    --chart-1: 158 64% 32%;
+    --chart-2: 43 96% 56%;
+    --chart-3: 0 72% 51%;
+    --chart-4: 142 76% 36%;
+    --chart-5: 217 91% 60%;
 
     --border: 215 20% 25%;
     --input: 215 20% 18%;
